<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#213448"

    tools:context=".DetailActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/outerCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-15dp"
        app:cardBackgroundColor="#547792"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_bg"
            android:padding="16dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/imageCard"
                android:layout_width="130dp"
                android:layout_height="200dp"
                android:layout_marginTop="15dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/cover"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@null"
                    android:scaleType="centerCrop"
                    android:src="@drawable/books1" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="15dp"
                android:text="@string/titleDummy"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/imageCard"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintStart_toEndOf="@id/imageCard"
                app:layout_constraintTop_toBottomOf="@id/title">

                <TextView
                    android:id="@+id/writer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/DummyWriter"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/DummyYear"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/genre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/DummyGenre"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/sinopsisCArd"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="16dp"
        app:cardBackgroundColor="#547792"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@id/ll_button"
        app:layout_constraintTop_toBottomOf="@id/outerCard">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:background="@drawable/gradient_bg2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/sinpsishead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/sinopsis"
                android:textColor="#F5EEDC"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingHorizontal="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/sinpsishead"
                app:layout_constraintTop_toBottomOf="@id/sinpsishead">

                <TextView
                    android:id="@+id/sinopsis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:text="@string/sinopsisDummy"
                    android:textColor="#F5EEDC"
                    android:textSize="17sp" />
            </ScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/ll_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/backBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="8dp"
            android:layout_weight="1"
            android:backgroundTint="#ECEFCA"
            android:paddingVertical="12dp"
            android:text="@string/back"
            android:textColor="#213448" />

        <Button
            android:id="@+id/favBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="8dp"
            android:layout_weight="1"
            android:backgroundTint="#ECEFCA"
            android:paddingVertical="12dp"
            android:text="@string/add_to_favorite"
            android:textColor="#213448" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
